src/snapshots/bvr__tui__tests__snap_board_narrow.snap
---
source: src/tui.rs
expression: text
---
bvr 1 Main b Board i In g Graph H Hist  | 3/3 | all
                     BOARD [by: Status]
  📋 OPEN (2)  🔄 IN PROGRESS…🚫 BLOCKED (0)  ✅ CLOSED (1)
╭─────────────╮╭─────────────╮╭─────────────╮╭─────────────╮
│ ╭─────────╮ ││             ││             ││ ╭─────────╮ │
│ │ 📋 P0 … │ ││             ││             ││ │ 📋 P0 … │ │
│ │ Root    │ ││             ││             ││ │ Closed  │ │
│ │ ⚡→1 c… │ ││             ││             ││ │         │ │
│ ╰─────────╯ ││             ││             ││ ╰─────────╯ │
│             ││             ││             ││             │
│ ╭─────────╮ ││             ││             ││             │
│ │ 📋 P0 … │ ││             ││             ││             │
│ │ Depend… │ ││             ││             ││             │
│ │ 🚫←A (… │ ││             ││             ││             │
│ ╰─────────╯ ││             ││             ││             │
│             ││             ││             ││             │
│             ││   (empty)   ││   (empty)   ││             │
│             ││             ││             ││             │
│             ││             ││             ││             │
│             ││             ││             ││             │
│             ││             ││             ││             │
│             ││             ││             ││             │
│             ││             ││             ││             │
│             ││             ││             ││             │
│             ││             ││             ││             │
│             ││             ││             ││             │
│             ││             ││             ││             │
│             ││             ││             ││             │
╰─────────────╯╰─────────────╯╰─────────────╯╰─────────────╯
 📋 ALL  1-4:col • o/c/r:filter • s:group • L:labels • /:sea
