src/snapshots/bvr__tui__tests__snap_board_wide.snap
---
source: src/tui.rs
expression: text
---
                                                             BOARD [by: Status]
       📋 OPEN (2) 2🔴 ⏱5mo                🔄 IN PROGRESS (0)                   🚫 BLOCKED (0)                 ✅ CLOSED (1) 1🔴 ⏱5mo
╭─────────────────────────────────╮╭─────────────────────────────────╮╭─────────────────────────────────╮╭─────────────────────────────────╮
│ ╭─────────────────────────────╮ ││                                 ││                                 ││ ╭─────────────────────────────╮ │
│ │ 📋 P0 A 5mo ag              │ ││                                 ││                                 ││ │ 📋 P0 C 4mo ag              │ │
│ │ Root                        │ ││                                 ││                                 ││ │ Closed                      │ │
│ │ ⚡→1 core,parity            │ ││                                 ││                                 ││ │                             │ │
│ ╰─────────────────────────────╯ ││                                 ││                                 ││ ╰─────────────────────────────╯ │
│                                 ││                                 ││                                 ││                                 │
│ ╭─────────────────────────────╮ ││                                 ││                                 ││                                 │
│ │ 📋 P0 B 4mo ag              │ ││                                 ││                                 ││                                 │
│ │ Dependent                   │ ││                                 ││                                 ││                                 │
│ │ 🚫←A (Root)                 │ ││                                 ││                                 ││                                 │
│ ╰─────────────────────────────╯ ││                                 ││                                 ││                                 │
│                                 ││                                 ││                                 ││                                 │
│                                 ││             (empty)             ││             (empty)             ││                                 │
│                                 ││                                 ││                                 ││                                 │
│                                 ││                                 ││                                 ││                                 │
│                                 ││                                 ││                                 ││                                 │
│                                 ││                                 ││                                 ││                                 │
│                                 ││                                 ││                                 ││                                 │
│                                 ││                                 ││                                 ││                                 │
│                                 ││                                 ││                                 ││                                 │
│                                 ││                                 ││                                 ││                                 │
│                                 ││                                 ││                                 ││                                 │
│                                 ││                                 ││                                 ││                                 │
│                                 ││                                 ││                                 ││                                 │
│                                 ││                                 ││                                 ││                                 │
╰─────────────────────────────────╯╰─────────────────────────────────╯╰─────────────────────────────────╯╰─────────────────────────────────╯
 📋 ALL  1-4:col • o/c/r:filter • s:group • L:labels • /:search • ?:help  ○2 ◉1 ◈0 ●1   3 issues  hjkl nav │ G bottom │ tab detail │ b list
