src/snapshots/bvr__tui__tests__snap_confirm_modal.snap
---
source: src/tui.rs
expression: text
---
┌Export Pages?─────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│ Finalize the current pages export settings?                                                      │
│                                                                                                  │
│ Press Y to confirm, N or Esc to cancel.                                                          │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Y=confirm | N/Esc=cancel
