src/snapshots/bvr__tui__tests__snap_flow_matrix_detail_focus.snap
---
source: src/tui.rs
expression: text
---
DEPENDENCY FLOW  │ 2 labels │ 0 cross-label deps │ 0 bottlenecks
────────────────────────────────────────────────────────────────────────────────────────────────────
  LABELS (by blocking power)        │ ▸ core
─────────────────────────────────── │ ──────────────────────────────────────────────────────────────
core         ░░░░░░░░░░░░░░░   0    │
parity       ░░░░░░░░░░░░░░░   0    │ IMPACT SUMMARY
                                    │   Blocking Power: ░░░░░░░░░░░░░░░░░░░░ Low
                                    │
                                    │ BLOCKS → (0)                   ← BLOCKED BY (0)
                                    │
                                    │ Press Enter to see issues
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
────────────────────────────────────────────────────────────────────────────────────────────────────
j/k: navigate  Enter: drill down  Tab: switch panel  Esc: close
 📋 ALL  ⚠ 2 alerts (!)   ○2 ◉1 ◈0 ●1            3 issues  j/k nav │ tab panel │ ⏎ drill │ esc back
