src/snapshots/bvr__tui__tests__snap_flow_matrix_list_overview.snap
---
source: src/tui.rs
expression: text
---
DEPENDENCY FLOW  │ 3 labels │ 0 cross-label deps │ 0 bottlenecks
────────────────────────────────────────────────────────────────────────────────────────────────────
▸ LABELS (by blocking power)        │   backend
─────────────────────────────────── │ ──────────────────────────────────────────────────────────────
backend      ░░░░░░░░░░░░░░░   0    │
frontend     ░░░░░░░░░░░░░░░   0    │ IMPACT SUMMARY
urgent       ░░░░░░░░░░░░░░░   0    │   Blocking Power: ░░░░░░░░░░░░░░░░░░░░ Low
                                    │
                                    │ BLOCKS → (0)                   ← BLOCKED BY (0)
                                    │
                                    │ Press Enter to see issues
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
                                    │
────────────────────────────────────────────────────────────────────────────────────────────────────
j/k: navigate  Enter: drill down  Tab: switch panel  Esc: close
 📋 ALL  L:labels • h:detail  ○3 ◉3 ◈0 ●0        3 issues  j/k nav │ tab panel │ ⏎ drill │ esc back
