src/snapshots/bvr__tui__tests__snap_graph_detail_focus.snap
---
source: src/tui.rs
expression: text
---
┌Graph Nodes─────────────────────────────┐┌Graph Focus [focus]─────────────────────────────────────┐
│                                        ││                                                        │
│ Nodes  3 by critical-path score | h/l  ││ Graph: nodes=3 edges=1 cycles=0 actionable=1           │
│ ────────────────────────────────────── ││ Focus: node 2/3 -> B (Dependent)                       │
│   A PR ██████ 0.48 ↓1 Root             ││ Focused edge: depends on [1/1] B -> A (Root)           │
│ ▸ B PR ███░░░ 0.26 ⊘1 Depende…         ││                                                        │
│   C PR ███░░░ 0.26 Closed              ││                   ▲ BLOCKED BY (must complete first) ▲ │
│                                        ││                           ╔══════════════════╗         │
│                                        ││                           ║>[o] A            ║         │
│                                        ││                           ║Root              ║         │
│                                        ││                           ╚══════════════════╝         │
│                                        ││                                    │                   │
│                                        ││                                    │                   │
│                                        ││                                    ▼                   │
│                                        ││                   ╔══════════════════════════════════╗ │
│                                        ││                   ║[o T p0] B                        ║ │
│                                        ││                   ║Dependent                         ║ │
│                                        ││                   ║up:1 down:0                       ║ │
│                                        ││                   ╚══════════════════════════════════╝ │
│                                        ││                                                        │
│                                        ││  📊 GRAPH METRICS                                      │
│                                        ││ Importance                                             │
│                                        ││   Critical Path         1  ███░░░  #2                  │
│                                        ││   PageRank         0.2597  ███░░░  #2                  │
│                                        ││   Eigenvector      0.0000  ░░░░░░  #2                  │
│                                        ││ Flow & Connectivity                                    │
│                                        ││   Betweenness      0.0000  ░░░░░░  #1                  │
│                                        ││                                                        │
└────────────────────────────────────────┘└────────────────────────────────────────────────────────┘
 📋 ALL  L:labels • h:detail  ○2 ◉1 ◈0 ●1             3 issues  ^j/k scroll │ h/l nodes │ j/k nodes
