src/snapshots/bvr__tui__tests__snap_graph_narrow.snap
---
source: src/tui.rs
expression: text
---
┌Graph View [focus]────────────────────────────────────────┐
│                                                          │
│ Graph: nodes=3 edges=1 cycles=0 actionable=1             │
│ Focus: node 1/3 -> A (Root)                              │
│ Focused edge: list focus (Tab to inspect relationships)  │
│                                                          │
│                   ╔══════════════════════════════════╗   │
│                   ║[o T p0] A                        ║   │
│                   ║Root                              ║   │
│                   ║up:0 down:1                       ║   │
│                   ╚══════════════════════════════════╝   │
│                                    │                     │
│                                    │                     │
│                                    ▼                     │
│                       ▼ BLOCKS (waiting on this) ▼       │
│                           ┌──────────────────┐           │
│                           │ [o] B            │           │
│                           │Dependent         │           │
│                           └──────────────────┘           │
│                                                          │
│  📊 GRAPH METRICS                                        │
│ Importance                                               │
│   Critical Path         2  ██████  #1                    │
│   PageRank         0.4805  ██████  #1                    │
│   Eigenvector      1.0000  ██████  #1                    │
│ Flow & Connectivity                                      │
│   Betweenness      0.0000  ░░░░░░  #1                    │
│                                                          │
└──────────────────────────────────────────────────────────┘
 📋 ALL  ⚠ 2 alerts (!)   ○2 ◉1 ◈0 ●1   3 issues  h/l nodes
